--- a/res/SmokeAPI.config.json
+++ b/res/SmokeAPI.config.json
@@ -3,6 +3,7 @@
   "logging": true,
   "unlock_family_sharing": true,
   "default_app_status": "unlocked",
+  "override_app_id": 0,
   "override_app_status": {},
   "override_dlc_status": {},
   "auto_inject_inventory": true,
