--- a/res/SmokeAPI.config.json
+++ b/res/SmokeAPI.config.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://raw.githubusercontent.com/acidicoala/SmokeAPI/refs/heads/master/res/SmokeAPI.schema.json",
+  "$schema": "https://raw.githubusercontent.com/acidicoala/SmokeAPI/refs/tags/v3.0.0/res/SmokeAPI.schema.json",
   "$version": 3,
   "logging": true,
   "default_app_status": "unlocked",
