--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,10 @@ jobs:
     permissions:
       contents: write
     with:
-      modules: >-
-        ["SmokeAPI"]
-
+      arch: [ 64 ]
+      config: Release
+      modules: [ "SmokeAPI" ]
       zip_command: >
         zip -j $ZIP_NAME
         artifacts/*/*.dll
         res/SmokeAPI.config.json
-
-      config: Release
