Deactivated steam_api exports

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,9 +37,9 @@ set(SMOKE_API_SOURCES
     ${SMOKE_API_STATIC_SOURCES}
     src/smoke_api/smoke_api.cpp
     src/smoke_api/smoke_api.hpp
-    src/steam_api/exports/steam_api.cpp
-    src/steam_api/exports/steam_api.hpp
-    src/steam_api/exports/steam_api_unversioned.cpp
+#    src/steam_api/exports/steam_api.cpp
+#    src/steam_api/exports/steam_api.hpp
+#    src/steam_api/exports/steam_api_unversioned.cpp
     src/steam_api/virtuals/isteamapps.cpp
     src/steam_api/virtuals/isteamclient.cpp
     src/steam_api/virtuals/isteamgameserver.cpp
