--- a/res/SmokeAPI.config.json
+++ b/res/SmokeAPI.config.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "https://raw.githubusercontent.com/acidicoala/SmokeAPI/refs/tags/v3.1.0/res/SmokeAPI.schema.json",
+  "$schema": "https://raw.githubusercontent.com/acidicoala/SmokeAPI/refs/tags/v3.1.1/res/SmokeAPI.schema.json",
   "$version": 4,
   "logging": true,
-  "log_steam_http": true,
+  "log_steam_http": false,
   "default_app_status": "unlocked",
   "override_app_status": {},
   "override_dlc_status": {},
